# cjm-transcription-plugin-voxtral-vllm

./: .gitignore  README.md  cjm.yaml  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_transcription_plugin_voxtral_vllm/: _modidx.py  meta.py  plugin.py
examples/: test_integration.ipynb
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: test_reconfigure.py  validate_session_a_e2e.py
