[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcription-plugin-voxtral-vllm"
dynamic = ["version"]
description = "Mistral Voxtral plugin for the cjm-transcription-plugin-system library - provides local speech-to-text transcription through vLLM with configurable model selection and parameter control."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'cjm_transcription_plugin_system>=0.0.27', 'torch', 'numpy', 'soundfile', 'transformers', 'accelerate', 'librosa', 'mistral-common[audio]', 'uv', 'vllm', 'nest-asyncio']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcription-plugin-voxtral-vllm"
Documentation = "https://cj-mills.github.io/cjm-transcription-plugin-voxtral-vllm"

[project.entry-points.nbdev]
cjm_transcription_plugin_voxtral_vllm = "cjm_transcription_plugin_voxtral_vllm._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcription_plugin_voxtral_vllm.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcription_plugin_voxtral_vllm*"]

[tool.nbdev]
